--- a/index.html
+++ b/index.html
@@ -44,11 +44,6 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-		
-		<!-- Underscore templates -->
-		<script type="text/underscore-template" id="modal">
-			<p><%- event.name %></p>
-		</script>
 	</head>
 
 	<body class="mainPage">
@@ -71,8 +66,8 @@
 			<div class="collapse navbar-collapse" id="navbar">
 			  <form class="navbar-form navbar-right loggedOut">
 				<div class="form-group">
-				  <input type="text" class="form-control" placeholder="Username">
-				  <input type="text" class="form-control" placeholder="Password">
+				  <input required type="text" class="form-control" placeholder="Username">
+				  <input required type="text" class="form-control" placeholder="Password">
 				</div>
 				<button type="submit" class="btn btn-default loginButton">Login</button>
 			  </form>
@@ -81,7 +76,8 @@
 			  </form>
 			  <ul class="nav navbar-nav navbar-right">
 				<li><a href="#" class="toggleModal loggedOut" data-modal="registerUser">Register User</a></li>
-				<li><a href="form.html">New Cruise</a></li>
+				<li class="loggedIn"><a href="form.html">New Cruise</a></li>
+				<li class="loggedOut"><a href="#" class="toggleModal" data-modal="loginRequired">New Cruise</a></li>
 				  <ul class="nav navbar-nav navbar-right loggedIn">
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Test User <span class="caret"></span></a>
@@ -144,7 +140,7 @@
 			</div>
 			<div class="btn-group-justified btn-group loggedOut">
 				<div class="btn-group btn-group-lg" role="group" aria-label="...">
-					<a href="form.html" class="btn btn-primary">Order Cruise</a>
+					<a data-modal="loginRequired" class="toggleModal btn btn-primary">Order Cruise</a>
 				</div>
 			</div>
 			<div class="btn-group-justified btn-group loggedIn">
