--- a/user.html
+++ b/user.html
@@ -88,7 +88,7 @@
 		<div class="container-fluid">
 			<div class="alert alert-warning alert-dismissible" role="alert">
 			  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			  <strong><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Warning:</strong> One cruise is missing information which is due in under a week.
+			  <strong><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Warning:</strong> <a href="#cruiseTop" class="alert-link">One cruise</a> is missing information which is due in under a week.
 			</div>
 
 		  <!--<div class="row placeholders">
@@ -160,7 +160,7 @@
 			  </div>
 			</div>
 
-		  <h2 class="sub-header">Your Cruises</h2>
+		  <h2 id="cruiseTop" class="sub-header">Your Cruises</h2>
 		  
 		    <div class="panel panel-warning user-cruise">
 			  <div class="panel-heading">
@@ -177,11 +177,17 @@
 						</ul>
 					</div>
 					<div class="col-sm-7">
+						<h4>Missing information</h4>
+						<ul>
+							<li>Gear requirements need to be submitted within 5 days</li>
+						</ul>
+						<h4>Cruise summary</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<div class="col-sm-2">
-						<button type="button" class="btn btn-primary">Edit</button>
+						<a href="editForm.html" class="btn btn-primary">Edit</a>
 						<button type="button" class="btn btn-danger">Cancel</button>
+						<button type="button" class="btn btn-info">Show Details</button>
 					</div>
 				</div>
 			  </div>
@@ -202,11 +208,18 @@
 						</ul>
 					</div>
 					<div class="col-sm-7">
+						<h4>Cruise summary</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<div class="col-sm-2">
-						<button type="button" class="btn btn-primary">Edit</button>
+						<a href="editForm.html" class="btn btn-primary">Edit</a>
 						<button type="button" class="btn btn-danger">Cancel</button>
+						<button type="button" class="btn btn-info">Show Details</button>
+					</div>
+				</div>
+				<div class="row">
+					<div class="well">
+						<p>TEST ettsadjf ajf ajf lksajf jfølewajf alkdjf kjf lwajf aewjf ajshf hfr jhfakjshf kjewahfkjdsahf kjsa f</p>
 					</div>
 				</div>
 			  </div>
@@ -227,11 +240,13 @@
 						</ul>
 					</div>
 					<div class="col-sm-7">
+						<h4>Cruise summary</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<div class="col-sm-2">
-						<button type="button" class="btn btn-primary">Edit</button>
+						<a href="editForm.html" class="btn btn-primary">Edit</a>
 						<button type="button" class="btn btn-danger">Cancel</button>
+						<button type="button" class="btn btn-info">Show Details</button>
 					</div>
 				</div>
 			  </div>
@@ -252,11 +267,13 @@
 						</ul>
 					</div>
 					<div class="col-sm-7">
+						<h4>Cruise summary</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<div class="col-sm-2">
-						<button type="button" class="btn btn-primary">Edit</button>
+						<a href="editForm.html" class="btn btn-primary">Edit</a>
 						<button type="button" class="btn btn-danger">Cancel</button>
+						<button type="button" class="btn btn-info">Show Details</button>
 					</div>
 				</div>
 			  </div>
