Implemented form add/remove participant buttons

--- a/form.html
+++ b/form.html
@@ -199,7 +199,7 @@
 					<div class="page-header">
 						<h3>Cruise Participants</h3>
 					</div>
-					<div class="panel panel-default">
+					<div class="panel panel-default participant">
 						<div class="panel-heading">Participant name</div>
 						<div class="panel-body">
 							<div class="form-group">
@@ -224,12 +224,12 @@
 							</div>
 							<div class="btn-group-justified btn-group">
 								<div class="btn-group btn-group-lg" role="group" aria-label="...">
-									<button type="submit" class="btn btn-danger">Remove participant</button>
+									<button type="submit" class="btn btn-danger removeParticipant">Remove participant</button>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="panel panel-default">
+					<div class="panel panel-default participant">
 						<div class="panel-heading">Participant name</div>
 						<div class="panel-body">
 							<div class="form-group">
@@ -254,14 +254,14 @@
 							</div>
 							<div class="btn-group-justified btn-group">
 								<div class="btn-group btn-group-lg" role="group" aria-label="...">
-									<button type="submit" class="btn btn-danger">Remove participant</button>
+									<button type="submit" class="btn btn-danger removeParticipant">Remove participant</button>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="btn-group-justified btn-group">
 						<div class="btn-group btn-group-lg" role="group" aria-label="...">
-							<button type="submit" class="btn btn-success">Add new participant</button>
+							<button type="submit" class="btn btn-success addParticipant">Add new participant</button>
 						</div>
 					</div>
 					<div class="page-header">
