--- a/tmpls/modal.html
+++ b/tmpls/modal.html
@@ -10,7 +10,7 @@
 		  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to your calendar</button>
 		  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Export as PDF</button>
 		  <button type="button" class="list-group-item list-group-item-info">More info</button>
-		  <button type="button" class="list-group-item list-group-item-warning">Edit</button>
+		  <a class="list-group-item list-group-item-warning" href="form.html">Edit</a>
 		</ul>
 	</div>
 	<div class="col-sm-9">
