--- a/form.html
+++ b/form.html
@@ -73,8 +73,7 @@
 					<ul class="dropdown-menu">
 						<li><a href="user.html"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Profile</a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="#">Your Cruises</a></li>
-						<li><a href="#">Options</a></li>
+						<li><a href="user.html#cruiseTop">Your Cruises</a></li>
 						<li><a href="admin.html">Admin</a></li>
 					</ul>
 				</li>
