--- a/user.html
+++ b/user.html
@@ -332,6 +332,7 @@
 					</div>
 					<div class="col-sm-2">
 						<a href="editForm.html" class="btn btn-primary">Edit</a>
+						<a href="editForm.html" class="btn btn-warning">Submit</a>
 						<button type="button" class="btn btn-danger">Delete</button>
 						<button type="button" class="btn btn-info">Show Details</button>
 					</div>
