--- a/form.html
+++ b/form.html
@@ -117,7 +117,7 @@
 					</div>
 					<div class="form-group">
 						<label for="exampleInputEmail1">Cruise name</label>
-						<p class="help-block">Example block-level help text here.</p>
+						<p class="help-block">Enter something descriptive.</p>
 						<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
 					</div>
 					<section class="container calendar">
@@ -183,6 +183,11 @@
 						<label for="exampleInputEmail1">Additional contact information</label>
 						<p class="help-block">Optional: This can for example be a phone number or an alternate email address.</p>
 						<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Additional contact information">
+					</div>
+					<div class="btn-group-justified btn-group">
+						<div class="btn-group btn-group-lg" role="group" aria-label="...">
+							<button type="submit" class="btn btn-info setMeAsCruiseLeader">Set me as cruise leader</button>
+						</div>
 					</div>
 					<div class="form-group">
 						<label for="exampleInputEmail1">Cruise aims</label>
